--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT = 8000
 MONGODB_URI = mongodb+srv://ashmeetsingh812:ash123@cluster0.s4vzxws.mongodb.net
 CORS_ORIGIN = *
+ACCESS_TOKEN_SECRET = JZa8pKwQ3yDfT9L7HUCHBCB
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET = DNENENUUEB84
+REFRESH_TOKEN_EXPIRY = 10d
