--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ ACCESS_TOKEN_SECRET = JZa8pKwQ3yDfT9L7HUCHBCB
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET = DNENENUUEB84
 REFRESH_TOKEN_EXPIRY = 10d
+
+CLOUDINARY_CLOUD_NAME = deploy
+CLOUDINARY_API_KEY = 559287164579583
+CLOUDINARY_API_SECRET =  IzjVc5R1OfDw2MzN3BryQxVcefU
