--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-node_modules
+/node_modules
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -71,6 +71,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variables file
+.env
 .env
 .env.test
 .env.production
